# flat-manager-hooks

./: Cargo.toml  README.md  example-config.json
.github/workflows/: ci.yml
src/: cmd_publish.rs  cmd_review.rs  cmd_validate.rs  config.rs  job_utils.rs  main.rs  storefront.rs  utils.rs
src/review/: diagnostics.rs  mod.rs  moderation.rs  review_files.rs  validation.rs
tests/: .gitignore  app.desktop  appstream.xml  com.example.NoAppstream.expected.json  com.example.NoAppstream.yml  com.example.NoScreenshotBranch.expected.json  com.example.NoScreenshotBranch.yml  com.example.WrongArchExecutable.expected.json  com.example.WrongArchExecutable.yml  main.c  run_tests.sh
