[package]
name = "flathub-hooks"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
clap = { version = "4.3.24", features = ["derive"] }
diff = "0.1.13"
elementtree = "1.2.3"
elf = "0.7.2"
env_logger = "0.10.0"
flate2 = "1.0.26"
log = "0.4.19"
ostree = { version = "0.18.0", features = ["v2021_5"] }
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
