[package]
name = "flathub-hooks"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.80", features = ["backtrace"] }
clap = { version = "4.5.61", features = ["derive"] }
diff = "0.1.13"
elementtree = "1.2.3"
elf = "0.8.0"
env_logger = "0.11.10"
flate2 = "1.0.27"
log = "0.4.20"
ostree = { version = "0.20.5", features = ["v2021_5"] }
reqwest = { version = "0.13.3", features = ["json", "blocking", "query"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["raw_value"] }
